--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
     --paragraph-title-font-family: 'Roboto', sans-serif;
     --footer-link-color: #31D0AA;
   --border-color:  #8E8F99 ;
+ --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ --timing-select:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 *,*::before,*::after{box-sizing: border-box;}
@@ -28,11 +30,9 @@ margin-right: auto;
 
 }
 
-.about-title-text{
-    width: calc((100% - 48px) / 3);
-    
-   
-}
+
+
+
 .title-about-container{   border-left: 1px solid var(--minor-colour);
     border-right: 1px solid var(--minor-colour);
     border-bottom: 1px solid var(--minor-colour);
@@ -44,7 +44,9 @@ margin-right: auto;
 
 .about-list{display: flex;flex-wrap: wrap; padding-left: 0;
    margin: 0; gap: 48px 24px;
-    }
+ }
+    
+    
     .about-list :nth-child(3n){margin-right: 0;}
     .about-list :nth-child(n+7){margin-bottom: 0;}
 .link {
@@ -57,6 +59,7 @@ margin-right: auto;
     color:var(--main-text-color);
  
 }
+
 .img-portfolio{display:block}
 
 .link:is( :active) {
@@ -64,8 +67,7 @@ margin-right: auto;
 }
 
 /* title */
-.link-shadow:hover{box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); display: block;}
+
 .logo {
     font-weight: 800;
     font-family: 'Raleway', sans-serif;
@@ -83,7 +85,23 @@ margin-right: 76px; padding: 24px 0;
     margin-left: auto;  
 }
  .header-inf{margin: 0;padding: 0;}
+
+.header-inf .header-link.current{position: relative;color:var(--main-background-color);}
+
+.header-inf .header-link.current::after{content: ''; 
+    width: 100%; height: 4px; background-color: var(--main-background-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 2px; position: absolute;
+    left: 0px;
+    bottom: 0; margin: 0 auto;  transition: opacity 250ms var(--timing-function); display: block;}
+
+
+
 /* header */
+
+
+
+
 
 .header-container{display: flex;   align-items: center;}
 .header-logo {
@@ -122,9 +140,17 @@ font-weight: 500;
     display: block ;
    padding-top: 24px;
    padding-bottom: 24px;
+ 
 }
+
+
+
+
 .header-link:hover{color: var(--main-background-color);}
 .header-link:focus{color: var(--main-background-color);}
+
+
+
 
 .header-link-address{font-weight: 400;
     font-size: 16px;
@@ -135,12 +161,12 @@ font-weight: 500;
     display: block ;
    padding-top: 24px;
    padding-bottom: 24px;}
-   .header-link-address:hover{color: var(--main-background-color);}
-   .header-link-address:focus{color: var(--main-background-color);}
+   .header-link-address:hover{color: var(--main-background-color);transition: var(--timing-select);}
+   .header-link-address:focus{color: var(--main-background-color);transition: var(--timing-select);}
  /* address */
 
-.list .link:hover{color: var(--main-background-color);}
-.list .link:focus{color: var(--main-background-color);}
+.list .link:hover{color: var(--main-background-color);transition: var(--timing-select);}
+.list .link:focus{color: var(--main-background-color);transition: var(--timing-select);}
 li{ list-style-type: none;}
 
 
@@ -168,9 +194,37 @@ li{ list-style-type: none;}
     margin: auto;
     border: none;
 }
-.solutions-button:hover{background-color: var(--main-background-color);}
-.solutions-button:focus{background-color: var(--main-background-color);}
+.solutions-button:hover{background-color: var(--main-background-color);transition: var(--timing-select);}
+.solutions-button:focus{background-color: var(--main-background-color);transition: var(--timing-select);}
 
+.backdrop{position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height:100%;
+background-color: rgba(46, 47, 66, 0.4);;
+}
+.backdrop.is-hidden{opacity: 0;pointer-events: none;visibility: hidden;
+}
+.modal{
+  position: absolute;
+top: 50%;
+  left: 50%;
+ transform: translate(-50%, -50%); 
+min-width: 408px;
+  min-height: 584px;
+background-color: #FCFCFC;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+transition: transform 250ms var(--timing-function);
+}
+.button-close{position: absolute;top: 24px;right: 24px; background-color: var(--minor-colour);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;justify-content: center;align-items: center;padding: 0;}
+.modal-icon{width: 8px;height: 8px;}
 .hero-button-list{
     font-family: var(--paragraph-title-font-family);
     font-weight: 500;
@@ -190,9 +244,9 @@ li{ list-style-type: none;}
 .hero-list{display: flex;justify-content: center;padding-left: 0; margin-bottom: 72px;margin-top: 0;}
 .hero-list .hero-button-list:hover{color: var(--main-title-color );background-color: var(--main-background-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);border-color:var(--main-background-color) ;}
+    0px 2px 2px rgba(0, 0, 0, 0.12);border-color:var(--main-background-color) ;transition: var(--timing-select);}
 
-.hero-list .hero-button-list:focus{color: var(--main-title-color);background-color: var(--main-background-color);}
+.hero-list .hero-button-list:focus{color: var(--main-title-color);background-color: var(--main-background-color);transition: var(--timing-select);}
 .hero-btn{margin-right: 24px;}
 .hero-list :last-child{margin-right: 0px;}
 .hero-none{padding-top: 96px;padding-bottom: 120px;}
@@ -388,8 +442,8 @@ line-height: 1.5;
   background-color: rgba(255, 255, 255, 0.1);
    }
    
-    .footer-links:hover{background-color: var(--footer-link-color);opacity: 1;}
-    .footer-links:focus{background-color: var(--footer-link-color);opacity: 1;}
+    .footer-links:hover{background-color: var(--footer-link-color);opacity: 1;transition: var(--timing-select);}
+    .footer-links:focus{background-color: var(--footer-link-color);opacity: 1;transition: var(--timing-select);}
   .text-links{ width: 100%;height: 100%;
     display:flex ; 
     border-radius: 50%;
@@ -397,7 +451,7 @@ line-height: 1.5;
     justify-content: center;
     background: var(--extra-background-color);;
      }
-    .text-links:hover{background-color: var(--main-background-color);}
+    .text-links:hover{background-color: var(--main-background-color);transition: var(--timing-select);}
  .footer-links:not(:last-child){margin-right: 16px;}
  
  .footer-icon{ fill:var(--extra-title-color)}
@@ -438,8 +492,8 @@ line-height: 1.5;
 border:1px solid var(--border-color); color: var(--border-color);
 }
 
-.section-five-link:hover{border-color: var(--main-background-color);color:var(--main-background-color);}
-.section-five-link:focus{border-color: var(--main-background-color);color:var(--main-background-color);}
+.section-five-link:hover{border-color: var(--main-background-color);color:var(--main-background-color);transition: var(--timing-select);}
+.section-five-link:focus{border-color: var(--main-background-color);color:var(--main-background-color);transition: var(--timing-select);}
 .section-five-svg{width: calc((100% - 120px) / 6); height: 88px;}
 
 .customers-section{padding-top: 120px;padding-bottom: 120px;}
@@ -451,3 +505,33 @@ border:1px solid var(--border-color); color: var(--border-color);
         </svg>
     </a>
 </li> */
+.link-shadow:hover .overlay {
+    transform: translateX(0); transition: var(--timing-select);}
+    .overlay{ position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--extra-background-color);
+        transform: translateY(100%);
+        transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1) ;
+        
+    color: #ffffff; width:360px; display: block; padding-top: 40px;padding-bottom: 196px;padding-left: 32px;padding-right: 32px;}
+    .wrapper{ overflow: hidden;position: relative;  }
+    
+    
+    
+    .about-title-text{
+        width: calc((100% - 48px) / 3);
+       
+    }
+    
+
+
+
+
+
+
+
+        .link-shadow:hover{box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); display: block;transition: var(--timing-select);}
