--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ margin-right: 76px; padding: 24px 0;
     width: 100%; height: 4px; background-color: var(--main-background-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 2px; position: absolute;
-    left: 0px;
+  bottom: -1px;
     bottom: 0; margin: 0 auto;  transition: opacity 250ms var(--timing-function); display: block;}
 
 
