--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ font-weight: 500;
     display: block ;
    padding-top: 24px;
    padding-bottom: 24px;
- 
+ transition: color var(--timing-select);
 }
 
 
@@ -160,8 +160,10 @@ font-weight: 500;
     text-decoration: none;  
     display: block ;
    padding-top: 24px;
-   padding-bottom: 24px;}
-   .header-link-address:hover{color: var(--main-background-color);transition: var(--timing-select);}
+   padding-bottom: 24px;
+   transition: transform var(--timing-select);
+}
+   .header-link-address:hover{color: var(--main-background-color);}
    .header-link-address:focus{color: var(--main-background-color);transition: var(--timing-select);}
  /* address */
 
@@ -193,9 +195,10 @@ li{ list-style-type: none;}
     min-width: 105px;
     margin: auto;
     border: none;
+    transition: background-color var(--timing-select);
 }
-.solutions-button:hover{background-color: var(--main-background-color);transition: var(--timing-select);}
-.solutions-button:focus{background-color: var(--main-background-color);transition: var(--timing-select);}
+.solutions-button:hover{background-color: var(--main-background-color);}
+.solutions-button:focus{background-color: var(--main-background-color);}
 
 .backdrop{position: fixed;
 top: 0;
@@ -203,14 +206,16 @@ left: 0;
 width: 100%;
 height:100%;
 background-color: rgba(46, 47, 66, 0.4);;
+transition: opacity var(--timing-select);
 }
 .backdrop.is-hidden{opacity: 0;pointer-events: none;visibility: hidden;
 }
+.backdrop.is-hidden.modal{transform:translate(-50%, -50%  ) scale(0.9);}
 .modal{
   position: absolute;
 top: 50%;
   left: 50%;
- transform: translate(-50%, -50%); 
+ transform: translate(-50%, -50%  )scale(1); 
 min-width: 408px;
   min-height: 584px;
 background-color: #FCFCFC;
@@ -224,7 +229,7 @@ transition: transform 250ms var(--timing-function);
     width: 24px;
     height: 24px;
     display: flex;justify-content: center;align-items: center;padding: 0;}
-.modal-icon{width: 8px;height: 8px;}
+.modal-icon{width: 8px;height: 8px; cursor: pointer;}
 .hero-button-list{
     font-family: var(--paragraph-title-font-family);
     font-weight: 500;
@@ -240,11 +245,12 @@ transition: transform 250ms var(--timing-function);
     border-radius: 4px;
     padding: 12px 24px;
     border: 1px solid var(--minor-colour); 
+    transition: color var(--timing-select), background-color var(--timing-select), box-shadow var(--timing-select),border-color var(--timing-select);
 }
 .hero-list{display: flex;justify-content: center;padding-left: 0; margin-bottom: 72px;margin-top: 0;}
 .hero-list .hero-button-list:hover{color: var(--main-title-color );background-color: var(--main-background-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);border-color:var(--main-background-color) ;transition: var(--timing-select);}
+    0px 2px 2px rgba(0, 0, 0, 0.12);border-color:var(--main-background-color) ;}
 
 .hero-list .hero-button-list:focus{color: var(--main-title-color);background-color: var(--main-background-color);transition: var(--timing-select);}
 .hero-btn{margin-right: 24px;}
@@ -442,8 +448,8 @@ line-height: 1.5;
   background-color: rgba(255, 255, 255, 0.1);
    }
    
-    .footer-links:hover{background-color: var(--footer-link-color);opacity: 1;transition: var(--timing-select);}
-    .footer-links:focus{background-color: var(--footer-link-color);opacity: 1;transition: var(--timing-select);}
+    .footer-links:hover{background-color: var(--footer-link-color);opacity: 1;transition:transform var(--timing-select);}
+    .footer-links:focus{background-color: var(--footer-link-color);opacity: 1;transition:transform var(--timing-select);}
   .text-links{ width: 100%;height: 100%;
     display:flex ; 
     border-radius: 50%;
@@ -516,7 +522,7 @@ border:1px solid var(--border-color); color: var(--border-color);
         transform: translateY(100%);
         transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1) ;
         
-    color: #ffffff; width:360px; display: block; padding-top: 40px;padding-bottom: 196px;padding-left: 32px;padding-right: 32px;}
+    color: #ffffff; width:360px; padding-top: 40px;padding-bottom: 0;padding-left: 32px;padding-right: 32px;}
     .wrapper{ overflow: hidden;position: relative;  }
     
     
