--- a/css/styles.css
+++ b/css/styles.css
@@ -446,6 +446,7 @@ line-height: 1.5;
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: var(--timing-select);
    }
    
     .footer-links:hover{background-color: var(--footer-link-color);opacity: 1;transition:transform var(--timing-select);}
